fixed gap at top of body

--- a/www/iframe.css
+++ b/www/iframe.css
@@ -1,5 +1,10 @@
 /* iframe.css */
 
+body {
+  margin: 0; padding: 0;
+  background-color: var(--vscode-editor-background);
+  color: var(--vscode-editor-foreground);
+}
 .line-numbers-rows > span:before {
   color: var(--vscode-editorLineNumber-foreground);
 }
